Atualização de bugs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <select id="selectKNotSel"></select>
         </label>
       </div>
-
+      <div id="errorMessages" style="color: red; margin-bottom: 10px;"></div>
       <div id="buttonGrid" class="grid"></div>
       <p id="preview"></p>
 
